<resources>
    <string name="app_name">Petagram 2.0</string>
    <string name="action_contact">Contacto</string>
    <string name="action_about">About</string>
    <string name="action_favorites">Favorites</string>
    <string name="tab_text_1">Inicio</string>
    <string name="tab_text_2">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragmento vacío</string>
    <string name="full_name">Nombre</string>
    <string name="email">Mail</string>
    <string name="comment">Deje su mensaje aquí!</string>
    <string name="send">ENVIAR</string>
    <string name="description_profile">Diseñador y programador entusiasta.</string>
    <string name="followers">100K</string>
    <string name="followers_label">seguidores</string>
    <string name="following">2K</string>
    <string name="following_label">siguiendo</string>
    <string name="p_likes">10</string>
    <string name="p_name">Sultán</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="show_notifications">Mostrar notificaciones</string>
    <string name="fcm_message">FCM Mensaje</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Firebase</string>
    <string name="channelId">my_channel_01</string>
    <string name="channel_name">Instagram Likes</string>
    <string name="channel_description">Notificar un nuevo like.</string>
    <string name="pic_transition">pic transition</string>
    <string name="sultan">Sultán</string>
    <string name="perro_estrella">Perro estrella</string>
    <string name="donkey">Donkey</string>
    <string name="mono_estrella">Mono estrella</string>
    <string name="morcilla">Morcilla</string>
</resources>