<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/civProfilePic"
                    android:layout_width="@dimen/width_profile_pic"
                    android:layout_height="@dimen/height_profile_pic"
                    android:layout_gravity="center|start"
                    android:src="@drawable/monkey"
                    app:srcCompat="@drawable/monkey" />

                <TextView
                    android:id="@+id/tvProfileName"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="@dimen/margin_start_profile_name"
                    android:layout_marginLeft="@dimen/margin_left_profile_name"
                    android:layout_marginTop="@dimen/margin_top_profile_name"
                    android:text="@string/morcilla" />

                <TextView
                    android:id="@+id/tvProfileUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/mono_estrella" />

                <TextView
                    android:id="@+id/tvProfileDescription"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="@dimen/marginstart_description_profile"
                    android:layout_marginLeft="@dimen/margin_left_description_profile"
                    android:layout_marginTop="70dp"
                    android:text="@string/description_profile" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:paddingTop="@dimen/padding_top_followers"
                android:paddingBottom="@dimen/padding_botton_followers">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPost"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="10" />

                    <TextView
                        android:id="@+id/tvPostLable"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="POSTS"
                        android:textAllCaps="true" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:paddingTop="@dimen/padding_top_followers"
                android:paddingBottom="@dimen/padding_botton_followers">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFollowers"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/followers" />

                    <TextView
                        android:id="@+id/tvFollowersLable"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers_label"
                        android:textAllCaps="true" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:paddingTop="@dimen/padding_top_following"
                android:paddingBottom="@dimen/padding_botton_following">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFollwing"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/following" />

                    <TextView
                        android:id="@+id/tvFollowingLable"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following_label"
                        android:textAllCaps="true" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFragmentProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="?attr/actionBarSize" />

        </RelativeLayout>

    </RelativeLayout>


</ScrollView>